Main screen with ViewPager

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="fiends_page_title">Друзья</string>
     <string name="history_page_title">История</string>
     <string name="settings_page_title">Настройки</string>
+    <string name="main_title">DEBTS</string>
 </resources>
