--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="history_page_title">История</string>
     <string name="settings_page_title">Настройки</string>
     <string name="main_title">DEBTS</string>
+    <string name="hello_text">Здравстуйте, %1$s.</string>
 </resources>
